--- a/templates/index.html
+++ b/templates/index.html
@@ -10,13 +10,13 @@
     <!-- Le styles -->
 
     <style type="text/css">
-         @import "/static/css/bootstrap.min.css";
-         @import "/static/css/extra.css";
+         @import "static/css/bootstrap.min.css";
+         @import "static/css/extra.css";
         body {
           padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
        </style>
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="static/css/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -25,7 +25,7 @@
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="/favicon.ico">
-       <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+       <script type="text/javascript" src="static/js/bootstrap.min.js"></script>
     </head>   
 
     <body>
@@ -55,7 +55,7 @@
           <div class="span12">
             <h1>NEO - WMS creator</h1>
             <span> Welcome to the WMS creator</span><br>
-            <span><a href="/dirs/">Click here, to move right along</a></span>
+            <span><a href="/wms_creator/dirs/">Click here, to move right along</a></span>
           </div>
         </div>
 
