--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html>
     <head>
-<meta charset="utf-8">
-    <title>Neo -- WMS makes</title>
+      {% block head %}
+
+    <meta charset="utf-8">
+    <title>Neo -- {% block title %}WMS makes{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -26,6 +28,7 @@
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="/favicon.ico">
        <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+       {% endblock %}
     </head>   
 
     <body>
@@ -53,9 +56,11 @@
       <header class="masthead">
         <div class="row">
           <div class="span12">
-            <h1>NEO - WMS creator</h1>
+            <h1>{% block content_title %} NEO - WMS creator{% endblock%}</h1>
+            {% block content %}
             <span> Welcome to the WMS creator</span><br>
             <span><a href="/wms_creator/dirs/">Click here, to move right along</a></span>
+            {% endblock %}
           </div>
         </div>
 
