--- a/templates/index.html
+++ b/templates/index.html
@@ -12,13 +12,13 @@
     <!-- Le styles -->
 
     <style type="text/css">
-         @import "/static/css/bootstrap.min.css";
-         @import "/static/css/extra.css";
+         @import "/wms_creator/static/css/bootstrap.min.css";
+         @import "/wms_creator/static/css/extra.css";
         body {
           padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
        </style>
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link href="/wms_creator/static/css/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -27,7 +27,7 @@
 
     <!-- Le fav and touch icons -->
     <link rel="shortcut icon" href="/favicon.ico">
-       <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+       <script type="text/javascript" src="/wms_creator/static/js/bootstrap.min.js"></script>
        {% endblock %}
     </head>   
 
