--- a/templates/filelist.html
+++ b/templates/filelist.html
@@ -11,7 +11,7 @@
           <h2>{{folder}}</h2>
            <a href="../">../ Up! </a><br><br>
 				{% if filelist %}
-			<form action="/wms" method="post">
+			<form action="/wms_creator/wms" method="post">
 				<table>
 				<thead>
 					<tr>
