--- a/templates/wms.html
+++ b/templates/wms.html
@@ -1,31 +1,7 @@
-<!doctype html>
-<html>
-    <head>
-	<meta charset="utf-8">
-    <title>Neo -- WMS makes</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <!-- Le styles -->
-
-    <style type="text/css">
-         @import "/static/css/bootstrap.min.css";
-         @import "/static/css/extra.css";
-        body {
-          padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-        }
-       </style>
-    <link href="/static/css/bootstrap-responsive.min.css" rel="stylesheet">
-
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Le fav and touch icons -->
-    <link rel="shortcut icon" href="/favicon.ico">
-       <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+{% extends "index.html" %}
+{% block title %} WMS URL {% endblock %}
+{% block head %}
+{{ super() }}
        <script type="text/javascript">
                $(function() {
           $('#map')
@@ -43,43 +19,19 @@
             "http://babbage/cgi-bin/mapserv?map=/var/maps/{{wms_title}}.map",
             {layers: 'Lufo2008'}
             );
-	    
+      
             map.addLayer(wms);            
 
             map.zoomToExtent(extent);
-	</script>
-    </head>   
+  </script>
+  {% endblock %}
 
-    <body>
-
-      <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="//intranet/">Intranet</a>
-          <div class="nav-collapse">
-<!--             <ul class="nav">
-              <li><a href="//intranet/">Home</a></li>
-              <li><a href="http://intranet.neo.nl/phpBB3/wikicwrs">WikiCwRS</a></li>
-              <li class="active"><a href="//babbage/clearsky">ClearSky</a></li>
-            </ul> -->
-          </div><!--/.nav-collapse --> 
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <header class="masthead">
-        <div class="row">
-          <div class="span12">
-            <h1>NEO - WMS creator</h1>
+{% block content_title %}NEO - WMS creator{% endblock %}
+{% block content %}
            <div class="map"></div>
            Open this in Qgis: http://babbage/cgi-bin/mapserv?map={{directory}}{{wms_title}}.map
           </div>
-        </div>
+{% endblock %}
 
 </body>
 </html>
